# xarray

./: CMakeLists.txt  Makefile  readme.md  suppressions.txt
src/: cmdparser.h  common.h  data_storage.h  index.h  main.cpp  shape.h  xarray.h  xarraybase.h  xarraybase_imp.h  xmatrix.h
src/xarray/: common.h  data_storage.h  index.h  shape.h  xarray.h  xarraybase.h  xarraybase_imp.h  xmatrix.h
tests/: CMakeLists.txt  Makefile  test_data_storage.cpp  test_index.cpp  test_shape.cpp  test_xarray.cpp  test_xmatrix.cpp
